# cpu-g

./: README.md  pyproject.toml  requirements-dev.txt
src/: test.py
