[project]
name = "cpu-g"
version = "0.16.4"
description = "cpu-g"
authors = [
    { name = "Lorenzo Carbonell <atareao@atareao.es", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "cycler>=0.12.1",
    "contourpy>=1.3.3",
    "dbus-python>=1.4.0",
    "fonttools>=4.60.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "psutil>=7.3.1",
    "pycairo>=1.29.0",
    "pygobject>=3.54.5",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "six>=.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cpu_g"]
