[project]
name = "cpu-g"
version = "0.16.4"
description = "CPU information and monitoring tool"
authors = [
    { name = "Lorenzo Carbonell", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "cycler>=0.12.1",
    "contourpy>=1.3.3",
    "dbus-python>=1.4.0",
    "fonttools>=4.60.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pycairo>=1.29.0",
    "pygobject>=3.54.5",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    # Jupyter/Lab
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    # System information
    "platformdirs>=4.5.0",
    "setuptools>=80.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
]
jupyter = [
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
    "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cpu_g"]

[project.scripts]
cpu-g = "cpu_g.main:main"
